# linux-kernel-sensor-driver

./: .gitignore  .gitmodules  README.md
app/: app.csproj
app/Utils/: Utils.cs
app/src/: Gui.cs  Server.cs
driver/: Makefile
driver/inc/: common.h  cp210x.h  device.h  device_queue.h  dht11.h  tfmini.h
driver/src/: cp210x.c  device.c  device_queue.c  dht11.c  drv.c  tfmini.c
server/: CMakeLists.txt
server/inc/: common.h  server.h  threads_handle.h  utils.h
server/src/: server.c  threads_handle.c  utils.c
